# OpenBooks

./: .gitignore  README.md  SESSION_PROGRESS.md  start_openbooks.bat
app/: __init__.py  database.py  routes.py
app/static/: styles.css
app/templates/: accounting.html  auth_base.html  base.html  bills.html  customers.html  dashboard.html  finance.html  invoice_edit.html  invoice_print.html  invoices.html  job_edit.html  jobs.html  login.html  payments.html  print_base.html  quote_edit.html  quote_print.html  quotes.html  reports.html  reports_print.html  settings.html  setup.html  tax_report.html  tax_report_print.html  ticket_edit.html  tickets.html
native_cpp/: CMakeLists.txt  README.md  build_native.bat
native_cpp/src/: main.cpp  models.h  storage.cpp  storage.h
